--- a/D09_微信小程序andWebSocket/lesson/豆瓣电影_小程序/app.wxss
+++ b/D09_微信小程序andWebSocket/lesson/豆瓣电影_小程序/app.wxss
@@ -1,10 +1,8 @@
 /**app.wxss**/
-.container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+page{
+	font-family: "Microsoft YaHei";
+	background-color: #fff;
+	display: flex;
+	/*纵向排列*/
+	flex-direction:column;
+}
