--- a/D09_微信小程序andWebSocket/lesson/豆瓣电影_小程序/pages/mine/mine.wxss
+++ b/D09_微信小程序andWebSocket/lesson/豆瓣电影_小程序/pages/mine/mine.wxss
@@ -1,1 +1,35 @@
 /* pages/mine/mine.wxss */
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 100rpx 0;
+  box-sizing: border-box;
+}
+
+.userinfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.userinfo-avatar {
+  width: 200rpx;
+  height: 200rpx;
+  margin: 10rpx;
+  border-radius: 50%;
+}
+
+.userinfo-nickname {
+  color: #aaa;
+}
+
+.userLocationInfo, .userSystemInfo {
+  margin-top: 25px;
+}
+
+.userLocationInfo text, .userSystemInfo text{
+	display: block;
+}
